Stop heading underlines rendering on Safari
For some reason it renders them in front of the text...

--- a/src/css/partials/global.css
+++ b/src/css/partials/global.css
@@ -39,7 +39,6 @@ h2 {
   text-decoration-color: var(--alternate);
   text-decoration-thickness: 0.5rem;
   text-decoration-skip-ink: none;
-  text-decoration-skip: none;
   text-underline-offset: -0.6rem;
 }
 
